# EzXml

./: .gitignore  CMakeLists.txt
.circleci/: Dockerfile.test  config.yml  docker.sh  dockerfile-test-entrypoint.sh
ParseSomething/: Algomation.h  StringDistance.h  main.cpp
ezxml.xcodeproj/: project.pbxproj
ezxml.xcodeproj/project.xcworkspace/xcuserdata/mjb.xcuserdatad/: UserInterfaceState.xcuserstate
ezxml.xcodeproj/xcshareddata/xcschemes/: ezxml.xcscheme
ezxml.xcodeproj/xcuserdata/mjb.xcuserdatad/xcschemes/: xcschememanagement.plist
ezxmli.xcodeproj/: project.pbxproj
ezxmli.xcodeproj/project.xcworkspace/xcuserdata/mjb.xcuserdatad/: UserInterfaceState.xcuserstate
ezxmli.xcodeproj/xcuserdata/mjb.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ezxmli.xcodeproj/xcuserdata/mjb.xcuserdatad/xcschemes/: ParseSomething.xcscheme  ezxmlOSX.xcscheme  ezxmliOS.xcscheme  xcschememanagement.plist
include/ezxml/: XAttributeIterator.h  XDocSpec.h  XElementIterator.h
mx-version/include/ezxml/: XAttribute.h  XAttributeIterImpl.h  XAttributeIterator.cpp  XAttributeIterator.h  XDoc.h  XDocSpec.h  XElement.h  XElementIterImpl.h  XElementIterator.cpp  XElementIterator.h  XFactory.h  XForwardDeclare.h
mx-version/private/private/: PugiAttribute.cpp  PugiAttribute.h  PugiAttributeIterImpl.cpp  PugiAttributeIterImpl.h  PugiDoc.cpp  PugiDoc.h  PugiElement.cpp  PugiElement.h  PugiElementIterImpl.cpp  PugiElementIterImpl.h  XElementIterator.cpp  XFactory.cpp
other/: ezxml.sublime-workspace
src/: PugiAttributeIterImpl.h  PugiDoc.cpp  PugiDoc.h  PugiElement.cpp  PugiElementIterImpl.h  Throw.h
src/include/ezxml/: JDoc.h  XDoc.h  XElement.h  XElementIterImpl.h  XElementIterator.h  XFactory.h  x.json
src/private/private/: JDocImpl.cpp  JDocImpl.h  PugiAttributeIterImpl.cpp  PugiElement.cpp  PugiElement.h  PugiElementIterImpl.cpp  PugiElementIterImpl.h  XFactory.cpp
src/test/: Files.h  FreezingTest.cpp  Path.h  TestFreezing.cpp  TestJson.cpp  TestProcessingInstructions.cpp  equal.h
testdata/xml/: NMTOKEN.xml  NMTOKEN_LTGfmt.xml  QName.xml  QName_LTGfmt.xml  idc006.nogen.n00.xml  idc006.nogen.v00.xml  nonNegativeInteger.xml  nonNegativeInteger_LTGfmt.xml  nonPositiveInteger.xml  nonPositiveInteger_LTGfmt.xml  normalizedString.xml  normalizedString_LTGfmt.xml  positiveInteger.xml  positiveInteger_LTGfmt.xml  region.xml  short.xml  short_LTGfmt.xml  string.xml  string_LTGfmt.xml  time.xml  time_LTGfmt.xml  token.xml  token_LTGfmt.xml  type-and-subst-1.n1.xml  type-and-subst-1.n10.xml  type-and-subst-1.n11.xml  type-and-subst-1.n12.xml  type-and-subst-1.n13.xml  type-and-subst-1.n14.xml  type-and-subst-1.n15.xml  type-and-subst-1.n16.xml  type-and-subst-1.n17.xml  type-and-subst-1.n18.xml  type-and-subst-1.n19.xml  type-and-subst-1.n20.xml  type-and-subst-1.n21.xml  type-and-subst-1.n22.xml  type-and-subst-1.n23.xml  type-and-subst-1.n24.xml  type-and-subst-1.n25.xml  (+40 more)
