cmake_minimum_required(VERSION 3.7.2)
project(ezxml
        VERSION 0.0.0
        LANGUAGES CXX)

option(EZXML_BUILD_TESTS "build or skip the test suite" OFF)
option(EZXML_BUILD_EXAMPLES "build or skip the examples" OFF)

find_package( Threads )
set(SOURCE_ROOT "./src")
set(PRIVATE_DIR "${SOURCE_ROOT}/private")
set(PUBLIC_DIR "${SOURCE_ROOT}/include")
set(TEST_DIR "${SOURCE_ROOT}/test")
set(EXTERN_DIR "${SOURCE_ROOT}/extern")

file(GLOB_RECURSE PUBLIC_HEADERS ${PUBLIC_DIR}/ezxml/*.h)
file(GLOB_RECURSE PRIVATE_HEADERS ${PRIVATE_DIR}/ezx/*.h)
file(GLOB_RECURSE PRIVATE_CXX ${PRIVATE_DIR}/private/*.cpp)

message(STATUS "${CMAKE_CURRENT_LIST_DIR} (${CMAKE_CURRENT_LIST_LINE}): adding rapidjson subdirectory")
set(RAPIDJSON_BUILD_DOC OFF CACHE BOOL "" FORCE)
set(RAPIDJSON_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
set(RAPIDJSON_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(RAPIDJSON_BUILD_CXX11 ON CACHE BOOL "" FORCE)
set(RAPIDJSON_BUILD_ASAN OFF CACHE BOOL "" FORCE)
set(RAPIDJSON_BUILD_UBSAN OFF CACHE BOOL "" FORCE)
set(RAPIDJSON_HAS_STDSTRING ON CACHE BOOL "" FORCE)
add_subdirectory(${EXTERN_DIR}/rapidjson)
message(STATUS "${CMAKE_CURRENT_LIST_DIR} (${CMAKE_CURRENT_LIST_LINE}): done adding rapidjson subdirectory")

add_library(ezxml STATIC ${PRIVATE_CXX})
source_group( "ezxml-public" FILES ${PUBLIC_HEADERS})
source_group( "ezxml-private" FILES ${PRIVATE_HEADERS} ${PRIVATE_CXX})
set_property(TARGET ezxml PROPERTY CXX_STANDARD 14)
target_include_directories(ezxml PUBLIC ${PUBLIC_DIR})
target_include_directories(ezxml PRIVATE ${PRIVATE_DIR})
target_include_directories(ezxml PRIVATE ${EXTERN_DIR}/rapidjson/include)
#target_link_libraries(ezxml rapidjson)

file(WRITE ${TEST_DIR}/Path.h
"// ezxml, Copyright 2019 by Matthew James Briggs
// This file is auto generated by CMake
#pragma once

// The absolute path to the root of the repository.
#ifndef LY_ROOT
#define LY_ROOT \"${CMAKE_CURRENT_SOURCE_DIR}\"
#endif

// The absolute path to the binary output directory.
#ifndef LY_BIN
#define LY_BIN \"${CMAKE_BINARY_DIR}\"
#endif
")

if(EZXML_BUILD_TESTS)
    message("tests will be compiled")
    file(GLOB_RECURSE TEST_CXX ${TEST_DIR}/*.cpp)
    file(GLOB_RECURSE TEST_HEADERS ${TEST_CXX}/*.h)
    source_group( "ezxml-test" FILES ${TEST_CXX} ${TEST_HEADERS})
    add_executable(ezxml_test ${TEST_CXX} ${TEST_HEADERS})
    target_include_directories(ezxml_test PRIVATE ${PRIVATE_DIR})
    target_include_directories(ezxml_test PRIVATE ${PUBLIC_DIR})
    target_include_directories(ezxml_test PRIVATE ${PRIVATE_DIR})
    target_link_libraries(ezxml_test ezxml)
    target_link_libraries(ezxml_test ${CMAKE_THREAD_LIBS_INIT})
    set_property(TARGET ezxml_test PROPERTY CXX_STANDARD 14)
else()
    message("tests will not be compiled")
endif()